# serializer version: 1
# name: test_RGT_S_x4
  ImageModelDescriptor(
    architecture=RGTArch(
      id='RGT',
      name='RGT',
    ),
    input_channels=3,
    bytes=40795068,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RGT_x2
  ImageModelDescriptor(
    architecture=RGTArch(
      id='RGT',
      name='RGT',
    ),
    input_channels=3,
    bytes=52871324,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RGT_x3
  ImageModelDescriptor(
    architecture=RGTArch(
      id='RGT',
      name='RGT',
    ),
    input_channels=3,
    bytes=53609884,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_RGT_x4
  ImageModelDescriptor(
    architecture=RGTArch(
      id='RGT',
      name='RGT',
    ),
    input_channels=3,
    bytes=53462172,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
